<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    tools:context=".ViewPlantRecord" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtViewPlantDetailsHeading"
            style="@style/ActivityHeadings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="350dp"
            android:layout_height="3dp"
            android:layout_below="@+id/txtViewPlantDetailsHeading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/cadetBlue"/>

        <TextView
            android:id="@+id/txtViewEnterGerminationDate"
            style="@style/UserHints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:text="@string/txt_germination_date" />

        <EditText
            android:id="@+id/editTxtGerminationDate"
            style="@style/UserHints"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/txtViewEnterGerminationDate"
            android:layout_alignParentEnd="true"
            android:textSize="14sp"
            android:hint="@string/hint_day_month_year"  />

        <TextView
            android:id="@+id/txtViewEnterTransplantDate"
            style="@style/UserHints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewEnterGerminationDate"
            android:layout_alignStart="@+id/txtViewEnterGerminationDate"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:text="@string/txt_transplant_date" />

        <EditText
            android:id="@+id/editTxtTransplantDate"
            style="@style/UserHints"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/txtViewEnterTransplantDate"
            android:layout_alignParentEnd="true"
            android:textSize="14sp"
            android:hint="@string/hint_day_month_year"  />

        <TextView
            android:id="@+id/txtViewEnterHarvestDate"
            style="@style/UserHints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewEnterTransplantDate"
            android:layout_alignStart="@+id/txtViewEnterGerminationDate"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:text="@string/txt_harvest_date" />

        <EditText
            android:id="@+id/editTxtHarvestDate"
            style="@style/UserHints"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/txtViewEnterHarvestDate"
            android:layout_alignParentEnd="true"
            android:textSize="14sp"
            android:hint="@string/hint_day_month_year" />

        <Button
            android:id="@+id/btnUpdatePlantDetails"
            style="@style/ButtonStyle"
            android:background="@drawable/btn_style_rounded_alternate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewEnterHarvestDate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_update_plant_details" />

        <Button
            android:id="@+id/btnDeletePlant"
            style="@style/ButtonStyle"
            android:background="@drawable/btn_style_rounded_alternate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnUpdatePlantDetails"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_delete_plant" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnAccessMyPlants"
        style="@style/ButtonStyle"
        android:background="@drawable/btn_style_square_alternate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_access_my_plants_list" />

</RelativeLayout>