<resources>

    <!-- Headings -->
    <string name="app_name">Grow Mate</string>
    <string name="heading_main_menu">Main Menu</string>
    <string name="heading_vegetable_menu">Vegetables</string>
    <string name="heading_herb_menu">Herbs</string>
    <string name="heading_spring_onion_page">Spring Onion</string>
    <string name="heading_mint_page">Mint</string>
    <string name="heading_my_plants">My Plants</string>

    <!-- TextViews -->
    <string name="txt_dates_instruction">Click plant today to see the milestone dates for when your plant will be:</string>
    <string name="txt_germinated">Germinated:</string>
    <string name="txt_transplant">Ready to transplant:</string>
    <string name="txt_harvest">Ready to harvest:</string>
    <string name="txt_germination_date">Enter new germination date:</string>
    <string name="txt_transplant_date">Enter new transplant date:</string>
    <string name="txt_harvest_date">Enter new harvest date:</string>
    <string name="txt_info_when">When:</string>
    <string name="txt_info_where">Where:</string>
    <string name="txt_info_how">How:</string>
    <string name="txt_info_care">Care:</string>
    <string name="txt_coming_soon">Herb menu coming soon&#8230;</string>
    <string name="txt_confirm_delete">Are you sure you want to delete this plant record?</string>

    <!-- Hints -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_growing_info">Growing Information</string>
    <string name="hint_empty_list">No plants to view&#8230;</string>
    <string name="hint_day_month_year">dd/mm/yyyy</string>

    <!-- Image content descriptions -->
    <string name="image_spring_onion">Spring Onion</string>
    <string name="image_vegetable_bunch2">Vegetable Bunch Main Menu</string>
    <string name="image_grow_mate_logo">Grow Mate Logo</string>
    <string name="image_icon_add">Add plant to db</string>
    <string name="image_icon_plant_today">Plant today icon</string>
    <string name="image_icon_germinated">Germinated icon</string>
    <string name="image_icon_transplant">Transplant icon</string>
    <string name="image_icon_harvest">Harvest icon</string>
    <string name="image_icon_cancel">Cancel icon</string>
    <string name="image_icon_tick">Tick icon</string>

    <!--Button labels -->
    <string name="btn_login">Login</string>
    <string name="btn_guest_login">Guest Login</string>
    <string name="btn_access_vegetable_menu">Vegetables</string>
    <string name="btn_access_herb_menu">Herbs</string>
    <string name="btn_access_my_plants_list">My Plants</string>
    <string name="btn_access_my_plants">Go to My Plants</string>
    <string name="btn_access_main_menu">Main Menu</string>
    <string name="btn_calculate_dates">Plant Today</string>
    <string name="btn_display_calculate_dates">Calculate Plant Dates</string>
    <string name="btn_display_growing_info">Growing Information</string>
    <string name="btn_update_plant_details">Update Details</string>
    <string name="btn_delete_plant">Delete Plant</string>
    <string name="btn_add_plant">Add to My Plants</string>
    <string name="btn_plant_today">Plant Today</string>

    <!-- Toolbar and menu -->
    <string name="title_activity_settings">Settings</string>
    <string name="menu_option_login">Log Out</string>
    <string name="menu_option_main_menu">Main Menu</string>
    <string name="menu_option_vegetable_menu">Vegetable Menu</string>
    <string name="menu_option_my_plants">My Plants</string>
    <string name="menu_option_settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
