...
                android:layout_below="@+id/vegetableHeading"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/cadetBlue"/>

            <Button
                android:id="@+id/btnDisplayPlantDateFragment"
                android:background="@drawable/btn_style_square"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider"
                android:layout_marginTop="30dp"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnDisplayPlantDateFragment"
                android:name="com.example.sd6501_assignment1.PlantDatesFragment" />

            <Button
                android:id="@+id/btnDisplayGrowingInfoFragment"
                android:background="@drawable/btn_style_square"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plantDatesFragment"
                android:text="@string/btn_display_growing_info" />
...
