...
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtViewDeletePlantDialogHeading"
        android:layout_marginTop="30dp">

        <ImageButton
            android:id="@+id/btnConfirmDelete"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:background="@drawable/btn_style_rounded"
...
